fix(progress-bar): add 4px to gap

--- a/packages/components/src/progress-bar/ProgressBar.module.css
+++ b/packages/components/src/progress-bar/ProgressBar.module.css
@@ -3,7 +3,7 @@
 
 .progressBar {
   display: grid;
-  gap: 0.25rem;
+  gap: 0.5rem;
   grid-template-areas:
     'label value'
     'bar bar';
